made first part of Support page component structure with HTML content

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -5,7 +5,6 @@
 *::after {
   box-sizing: border-box;
   margin: 0;
-  font-weight: normal;
 }
 
 body {
@@ -28,9 +27,30 @@ ul {
 a {
   text-decoration: none;
 }
+
+button {
+  background-color: transparent;
+  border: none;
+  font-family: inherit;
+}
+
 .main-container {
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
