--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,5 +1,6 @@
 :root {
   --bg-color-black: rgba(0, 0, 0, 0.78);
+  --bg-color-footer: rgb(17, 17, 17);
 
   --text-color-first: rgb(255, 255, 255);
   --text-color-second: rgb(175, 175, 175);
