made header bg color dynamic opacity; made ScrollToTopButton functionality

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,5 +1,5 @@
 :root {
-  --bg-color-black: rgba(0, 0, 0, 0.78);
+  --bg-color-black: rgb(0, 0, 0);
   --bg-color-footer: rgb(17, 17, 17);
 
   --text-color-first: rgb(255, 255, 255);
