--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,5 +1,6 @@
 :root {
   --bg-color-black: rgb(0, 0, 0);
+  --bg-color-grey: rgb(240, 240, 240);
   --bg-color-footer: rgb(17, 17, 17);
 
   --text-color-first: rgb(255, 255, 255);
