basic styling of form

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -41,6 +41,10 @@ button {
   font-family: inherit;
 }
 
+select {
+  cursor: pointer;
+}
+
 .main-container {
   width: 100%;
   max-width: 1200px;
