made support request form with basic styles

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -6,6 +6,7 @@
 
   --text-color-first: rgb(255, 255, 255);
   --text-color-second: rgb(175, 175, 175);
+  --text-color-placeholder: rgb(78, 78, 78);
 
   --decor-color-first: rgb(4, 145, 206);
   --decor-color-second: rgb(255, 111, 22);
