made form errors and validations

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -11,5 +11,7 @@
   --decor-color-first: rgb(4, 145, 206);
   --decor-color-second: rgb(255, 111, 22);
 
+  --form-error-color: rgb(249, 93, 81);
+
   --transition: ease-in-out .3s;
 }
