refactoring support specialist section, fix whole page CSS

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -3,6 +3,7 @@
   --bg-color-black: rgb(0, 0, 0);
   --bg-color-grey: rgb(240, 240, 240);
   --bg-color-footer: rgb(17, 17, 17);
+  --bg-color-no-wait-section: rgb(245, 245, 245);
 
   --text-color-first: rgb(255, 255, 255);
   --text-color-second: rgb(175, 175, 175);
