refactoring form, add process visualization

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -13,6 +13,7 @@
   --decor-color-second: rgb(255, 111, 22);
 
   --form-error-color: rgb(249, 93, 81);
+  --form-success-color: rgb(53, 184, 85);
 
   --transition: ease-in-out .3s;
 }
